--- a/BasicStructure1/app/src/main/res/values/strings.xml
+++ b/BasicStructure1/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Tau App</string>
     <string name="title_home">Home</string>
     <string name="earned">You have earned</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
