--- a/BasicStructure1/app/src/main/res/values/strings.xml
+++ b/BasicStructure1/app/src/main/res/values/strings.xml
@@ -8,6 +8,10 @@
     <string name="no_barcode_captured">No barcode captured</string>
     <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
 
+    <!-- Strings related to navigation -->
+    <string name="navigation_splash">\u03C4</string>
+    <!-- <string name="navigation_splash">αφρℹΓ\nΦΩΩΓΣ</string> -->
+
     <!-- Strings related to barcode scanner -->
     <string name="ok">OK</string>
     <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
