--- a/BasicStructure1/app/src/main/res/values/strings.xml
+++ b/BasicStructure1/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tau App</string>
+    <string name="app_name">Tau</string>
     <string name="title_home">Home</string>
     <string name="earned">You have earned</string>
     <string name="title_activity_maps">Map</string>
